<resources>
    <string name="app_name">FlightChecker</string>
    <string name="departure_airport">Departure Airport:</string>
    <string name="arrival_airport">Arrival Airport:</string>
    <string name="departure_time">Departure Time:</string>
    <string name="arrival_time">Arrival Time:</string>
    <string name="price">Price:</string>
    <string name="flight_number">Flight Number:</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_query_flights">Search Flights</string>
</resources>
