<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_query_flights"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nearsoft.flights.flightchecker.QueryFlights"
    tools:showIn="@layout/appbar_query_flights"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#E57373">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="?android:listDivider"
            android:dividerPadding="2.5dp"
            android:showDividers="middle"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_flight_takeoff_black_24dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/departure_airport"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:id="@+id/departureAirportInput"
                    android:hint="Mexico City"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_flight_land_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/arrival_airport"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:id="@+id/arrivalAirportInput"
                    android:layout_marginStart="15dp"
                    android:hint="Guadalajara"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/departure_time"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:onClick="openCalendar"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:id="@+id/departureQueryTime"
                    android:hint="30-June-2017"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/arrival_time"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:onClick="openCalendar"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:id="@+id/arrivalQueryTime"
                    android:layout_marginStart="20dp"
                    android:hint="30-June-2017"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_airline_seat_recline_extra_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:text="Passengers:"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp">
                    <Button
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textStyle="bold"
                        android:id="@+id/restPassenger"
                        android:theme="@style/PrimaryFlatButton"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:text="0"
                        android:id="@+id/passengers"/>
                    <Button
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="+"
                        android:textStyle="bold"
                        android:id="@+id/addPassenger"
                        android:textAlignment="center"
                        android:theme="@style/PrimaryFlatButton"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Search"
                android:theme="@style/PrimaryFlatButton"
                android:id="@+id/search"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
